# OctoPrint-go2rtc

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
octoprint_go2rtc/: __init__.py
octoprint_go2rtc/static/js/: go2rtc.js  video-rtc.js  video-stream.js
octoprint_go2rtc/templates/: go2rtc_settings.jinja2  go2rtc_webcam.jinja2
